fixed layout issues with single-project.php

--- a/web/app/themes/jc-theme/assets/styles/layouts/_carousel.scss
+++ b/web/app/themes/jc-theme/assets/styles/layouts/_carousel.scss
@@ -1,11 +1,30 @@
-
-.carousel {
-  background-color: $body-color;
-  border-radius: 20px;
+#testimonial-carousel {
+  .carousel {
+    background-color: $body-color;
+    border-radius: 20px;
+    .carousel-item {
+      height: 150px;
+    }
+  }
 }
 
-.carousel-item {
-  height: 150px;
+@media screen and (max-width: 575px) {
+  #testimonial-carousel {
+    .carousel {
+      margin: 0px;
+    }
+  }
+}
+
+.carousel-control-prev,
+.carousel-control-next,
+.carousel-control-prev:hover,
+.carousel-control-next:hover,
+.carousel-control-prev:active,
+.carousel-control-next:active,
+.carousel-control-prev:focus,
+.carousel-control-next:focus {
+  color: $main-color;
 }
 
 .blockquote {
@@ -28,23 +47,11 @@
   }
 }
 
-
-.carousel-control-prev,
-.carousel-control-next,
-.carousel-control-prev:hover,
-.carousel-control-next:hover,
-.carousel-control-prev:active,
-.carousel-control-next:active,
-.carousel-control-prev:focus,
-.carousel-control-next:focus {
-  color: $main-color;
-}
-
 @media (max-width: 575px) {
   .blockquote {
     font-size: .8em;
   }
-  .carousel {
-    margin: 0px;
-  }
+
 }
+
+
